<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="11">
    <TextView
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/servingSize"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal">
    </TextView>
    <LinearLayout android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:id="@+id/size_edit"
            android:autofillHints="size"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/hint"
            android:inputType="number"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:text="g"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="start"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>
    <Button
        android:id="@+id/btn_enter"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="end"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/enter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>
    <TextView
        android:id="@+id/nutriments"
        android:layout_column="0"
        android:layout_row="3"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>
</GridLayout>