<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="11">
    <TextView
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal">
    </TextView>
    <Button
        android:id="@+id/btn_joggen"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/joggen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>
    <Button
        android:id="@+id/btn_workout"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/workout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>

    <TextView
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/steps"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/text_steps"
        android:layout_column="0"
        android:layout_row="4"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_column="0"
        android:layout_row="5"
        android:text="Heute"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/text_steps_today"
        android:layout_column="0"
        android:layout_row="6"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/btn_stats"
        android:layout_column="0"
        android:layout_row="7"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="Stats"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>
    <Button
        android:id="@+id/btn_share"
        android:layout_column="0"
        android:layout_row="8"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="Share"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>
    <Button
        android:id="@+id/btn_food"
        android:layout_column="0"
        android:layout_row="9"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/food"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>
    <Button
        android:id="@+id/btn_live"
        android:layout_column="0"
        android:layout_row="10"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/live"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>

</GridLayout>
</ScrollView>