<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="12">
    <TextView
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/calculator"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/btn_calculate"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/calculate"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>
    <TextView
        android:id="@+id/gender_txt"
        android:layout_column="0"
        android:layout_row="2"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/weight_txt"
        android:layout_column="0"
        android:layout_row="3"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/height_txt"
        android:layout_column="0"
        android:layout_row="4"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/goal_weight_txt"
        android:layout_column="0"
        android:layout_row="5"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/age_txt"
        android:layout_column="0"
        android:layout_row="6"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/sug_calories"
        android:layout_column="0"
        android:layout_row="7"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/sug_fat"
        android:layout_column="0"
        android:layout_row="8"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/sug_carbohydrates"
        android:layout_column="0"
        android:layout_row="9"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/sug_protein"
        android:layout_column="0"
        android:layout_row="10"
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_column="0"
        android:layout_row="11"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/save"
        android:visibility="invisible"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </Button>
</GridLayout>